# aguasgaia

./: .gitignore  README.md  aguasgaia.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
aguasgaia/: aguasgaia.py  const.py
aguasgaia/models/: __init__.py  invoice.py  subscription.py
src/aguasgaia/: __init__.py  aguasgaia.py  const.py
src/aguasgaia/models/: __init__.py  consumption.py  invoice.py
tests/: aguasgaia_test.py
